# iot-utils

./: README.md
basic-startup-conf/: files-to-remove-from-rfs.conf.sd256
basic-startup-conf/basic-startup-conf-sd241-buster-1.0.0/debian/: changelog  control
basic-startup-conf/data-sd256/etc/tmpfiles.d/: rorfs-tmpfiles.conf
basic-startup-conf/debian/: basic-startup-conf-sd241-buster.install  basic-startup-conf-sd256-bookworm.install  control  copyright
cpp-app-utils/: configure.ac
cpp-app-utils-1.0.0/debian/: README.Debian  changelog  copyright
cpp-app-utils-1.0.0/src/: Configuration.cpp
cpp-app-utils-1.0.0/src/cpp-app-utils/: Configuration.h  Logger.h
cpp-app-utils-1.0.0/src/generic-embedded-utils/: GPIOInput.h  GPIOOutput.h
cpp-app-utils/debian/: changelog  control  files
cpp-app-utils/src/: BasicGPIO.cpp  Configuration.cpp  GPIOInput.cpp  GPIOOutput.cpp  Logger.cpp  Makefile.am
cpp-app-utils/src/cpp-app-utils/: Configuration.h
cpp-app-utils/src/generic-embedded-utils/: BasicGPIO.h
first-boot/debian/: changelog  control
gpiod2.2-debian/: howto.txt
gpiod2.2-debian/gpiod-2.2-2.2.0/debian/: README.Debian  README.source  changelog  control  copyright  libgpiod-2.2-dev.install  rules
host-target-network-routing/: route_network.sh
network-setup/debian/: changelog  control  copyright
os-developer-mode/data/sbin/: init-devel.sh
os-developer-mode/debian/: changelog  control  debhelper-build-stamp  files
rorfs/: rorfs  rwrfs
usb-hub-ctrl/: Makefile  power-reset-usb-port.sh
usb-hub-ctrl/debian/: changelog  control  copyright
(+21 files in other folders)
